--- a/css/style.css
+++ b/css/style.css
@@ -28,3 +28,26 @@
     font-weight: 500;
     color: #000000;
 }
+
+section.contact{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+section.contact #form{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+#submit{
+    background-color: yellow;
+    margin-top: 30px;
+    padding: 5px;
+    font-size: 15px;
+    font-weight: 800;
+    border: none;
+}
