--- a/css/style.css
+++ b/css/style.css
@@ -124,3 +124,53 @@ footer ul li a{
     color: #000000;
     font-size: 15px;
 }
+@media screen and ( max-width:600px ){
+    #header{
+        flex-direction: column;
+        height: auto;
+    }
+    #header #header-img{
+        width: 200px;
+        margin-left: 0px;
+    }
+    #header #header-img img{
+        width: 100%;
+    }
+    #nav-bar{
+        width: 100%;
+        flex-direction: column;
+        justify-content: baseline;
+        margin: 0 auto;
+    }
+    #nav-bar .nav-link p{
+        margin: 0px;
+        padding: 0px;
+    }
+    #nav-bar .nav-link a{
+        font-size: 12px;
+        margin: 0px;
+        padding: 0px;
+    }
+    .contact h1{
+        font-size: 18px;
+        text-align: center;
+    }
+    #features .features-list{
+        width: 85%;
+    }
+    .video{
+        width: 100%;
+    }
+    section#pricing{
+        flex-direction: column;
+        align-items: center;
+    }
+    #price{
+        margin: 10px 0px ;
+    }
+    .footer{
+        width: 100%;
+        justify-content: center;
+        align-items: center;
+    }
+}
